[package]
name = "rusnap-example"
version = "0.1.0"
authors = ["tiannian <dtiannian@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = "1.0.0"
getrandom = { version = "0.2.10", features = ["js"] }
log = "0.4.20"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.11.22", features = ["json"] }
rusnap = { path = "../rusnap/std" }
serde = { version = "1.0.188", features = ["derive"] }

[build-dependencies]
rusnap-build = "0.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
