[package]
name = "rusnap-example"
version = "0.1.0"
authors = ["tiannian <dtiannian@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = "1.0.0"
log = "0.4.20"
rand_core = { version = "0.6.4", features = ["getrandom"] }
getrandom = { version = "0.2.10", features = ["js"] }
# rusnap = { path = "../rusnap/rusnap" }
serde = { version = "1.0.188", features = ["derive"] }
rusnap = "0.1"

[build-dependencies]
# rusnap-build = { path = "../rusnap/rusnap-build" }
rusnap-build = "0.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# [patch.crates-io]
# reqwest = { path = "../reqwest" }
